added image to body

--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html>
   <head>
     <title>Epic Top Trending</title>
-    
+
 
   </head>
 
   <body>
-    put singer pic in here
+    <div class="banner">
+
+    <img src="unsplashjesse-ramirez.jpg" alt="singer on stage">
+    </div>
 
   </body>
 
