updated name under photo

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 
     <img src="unsplashjesse-ramirez.jpg" alt="singer on stage">
     </div>
+    <div class="name">
+      Epic Top Trending
+    </div>
 
   </body>
 
