added social icons

--- a/index.html
+++ b/index.html
@@ -14,6 +14,18 @@
     <div class="name">
       Epic Top Trending
     </div>
+    <div class="social-icons">
+      <a href="https://www.youtube.com/@EpicTopTrending" target="_blank">
+        YouTube
+      </a>
+      <a href="https://www.youtube.com/redirect?event=channel_description&redir_token=QUFFLUhqbXZCUHJ1MGVtbTM1RkJRamM2bzE3XzVRWEk3Z3xBQ3Jtc0trUm1KNVNkT0d0TlhIQUNPQ2dxVGFna0JUNEV1Y040VDBzSDR6dExVcmo5QmQ1Qi1rNDhzRXVuQ0Y2MjJMOFhfbHdKX3ZYeTBJbmhKVGtPdVNubkxqVmdOdWhGZGFZUVhobW5VNDhvSkl5Qno3ODZlaw&q=https%3A%2F%2Fepictrending.com%2F" target="blank">
+        Website
+      </a>
+      <a href="https://www.youtube.com/redirect?event=channel_description&redir_token=QUFFLUhqazFvVURmUHJVdlhWbVh0TTNEbkFqQnRkaTJTZ3xBQ3Jtc0tuQjJBOVMteDRyVGdTQ01WbXo5Z19aWkJvZkFuakRLN3FFTlRqeXVMaWt3NkFYaDVWanQ2VWtiVkhrcWtaLWg5QnN0SjRkR01nMDR4Y1psUmRNUzRsaHdGWUxDOXNOcmtUbHRGYkp4TkRkUnFFVnhYSQ&q=https%3A%2F%2Fwww.twitter.com%2FEpicTopTrending" target="_blank">
+        Twitter
+      </a>
+
+    </div>
 
   </body>
 
