took out pic name and changed to epic logo

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="banner">
 
-    <img src="unsplashjesse-ramirez.jpg" alt="singer on stage">
+    <img src="epic image.jpeg">
     </div>
     <div class="name">
       Epic Top Trending
