added meta tag for character set

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>Epic Top Trending</title>
+    <meta charset="utf-8>"
+    
 
 
   </head>
@@ -26,6 +28,12 @@
       </a>
 
     </div>
+
+    <div class="links">
+
+    </div>
+
+
 
   </body>
 
