made thumbnail folder changed image name

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="banner">
 
-    <img src="epic image.jpeg">
+    <img src="/thumbnails/epic image.jpeg">
     </div>
     <div class="name">
       Epic Top Trending
