added top and bottom padding

--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <style>
+      body {
+        Padding-top: 40px;
+  
+        padding-bottom: 40px;
+
+      }
+    </style>
+    
     <title>Epic Top Trending</title>
     <meta charset="utf-8>"
     
