--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <div class="banner">
 
-    <img src="/thumbnails/epic image.jpeg">
+    <img src="/thumbnails/epic image.jpeg" class="banner-image">
     </div>
     <div class="name">
       Epic Top Trending
