added banner image width and height

--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
     <div class="banner">
 
     <img src="/thumbnails/epic image.jpeg" class="banner-image">
+    <style>
+      .banner-image {
+        width: 128px;
+        height: 128px;
+      }
+    </style>
     </div>
     <div class="name">
       Epic Top Trending
