--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <div class="banner">
 
-    <img src="/thumbnails/epic image.jpeg" class="banner-image">
+    <img src="/thumbnails/unsplashjesse-ramirez.jpg" class="banner-image">
     <style>
       .banner-image {
         width: 128px;
