--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
       .banner-image {
         width: 128px;
         height: 128px;
+        object-fit: cover;
+        border-radius: 128px;
       }
     </style>
     </div>
