sized thumbnail images

--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
         object-fit: cover;
         border-radius: 128px;
       }
+      .thumbnail {
+        width: 48px;
+        height: 48px;
+        border-radius: 48px;
+        object-fit: cover;
+      }
     </style>
     </div>
     <div class="name">
