--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div>
     <div class="social-icons">
       <a href="https://www.youtube.com/@EpicTopTrending" target="_blank">
-        
+      YouTube  
       </a>
       <a href="https://epictrending.com/" target="blank">
         Website
