--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       Epic Top Trending
     </div>
     <div class="social-icons">
-      <a href="https://www.youtube.com/@EpicTopTrending" target="_blank">
+      <a href="https://www.youtube.com/@EpicTopTrending" target="_blank" img src="/thumbnails/youtube thumbnail.jpg">
       YouTube  
       </a>
       <a href="https://epictrending.com/" target="blank">
