--- a/index.html
+++ b/index.html
@@ -34,14 +34,27 @@
         border-radius: 48px;
         object-fit: cover;
       }
+      .name {
+        color: #fffffe;
+      }
+      .social-icons a {
+        color: #abd1c6;
+        text-decoration: none;
+      }
+      .link {background-color: #f9bc60;
+      }
+      .link a {
+        color: #001e1d;
+        text-decoration: none;
+      }
     </style>
     </div>
     <div class="name">
       Epic Top Trending
     </div>
     <div class="social-icons">
-      <a href="https://www.youtube.com/@EpicTopTrending" target="_blank" img src="/thumbnails/youtube thumbnail.jpg">
-      YouTube  
+      <a href="https://www.youtube.com/@EpicTopTrending" target="_blank">
+      YouTube
       </a>
       <a href="https://epictrending.com/" target="blank">
         Website
