--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
       .items{
         display: flex;
         flex-direction: column;
+        gap: 30px;
+        max-width: 640px;
       }
       .banner-image {
         width: 128px;
@@ -48,6 +50,8 @@
         text-decoration: none;
       }
       .link {background-color: #f9bc60;
+        display: flex;
+        align-items: center;
       }
       .link a {
         color: #001e1d;
@@ -71,7 +75,11 @@
 
     </div>
 
-    <div class="links">
+    <div class="link">
+      <img src="/thumbnails/youtube thumbnail.jpg">
+      <a target="_blank" href="https://www.youtube.com/@EpicTopTrending">
+      YouTube
+    </a>
 
     </div>
 
