made youtube logo smaller

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </div>
 
     <div class="link">
-      <img src="/thumbnails/youtube thumbnail.jpg">
+      <img src="/thumbnails/youtube thumbnail.jpg" class="thumbnail">
       <a target="_blank" href="https://www.youtube.com/@EpicTopTrending">
       YouTube
     </a>
