changed link title

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <div class="link">
       <img src="/thumbnails/youtube thumbnail.jpg" class="thumbnail">
       <a target="_blank" href="https://www.youtube.com/@EpicTopTrending">
-      YouTube
+      Epic Top Trending's YouTube Channel
     </a>
 
     </div>
