added another link w/thumbnail

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   </head>
 <div class="items">
-  <body>
+  <div>
     
       
     <div class="banner">
@@ -79,6 +79,14 @@
       <img src="/thumbnails/youtube thumbnail.jpg" class="thumbnail">
       <a target="_blank" href="https://www.youtube.com/@EpicTopTrending">
       Epic Top Trending's YouTube Channel
+    </a>
+
+    </div>
+
+    <div class="link"
+    <img src="/thumbnails/epic image.jpeg" class="thumbnail">
+    <a target="_blank" href="https://epictrending.com/">
+      Visit Our Website!
     </a>
 
     </div>
