--- a/index.html
+++ b/index.html
@@ -76,14 +76,16 @@
     </div>
 
     <div class="link">
+      <span style=display: block">
       <img src="/thumbnails/youtube thumbnail.jpg" class="thumbnail">
       <a target="_blank" href="https://www.youtube.com/@EpicTopTrending">
       Epic Top Trending's YouTube Channel
+    </span>
     </a>
 
     </div>
 
-    <div class="link"
+    <div class="link">
     <img src="/thumbnails/epic image.jpeg" class="thumbnail">
     <a target="_blank" href="https://epictrending.com/">
       Visit Our Website!
