added twitter thumb

--- a/index.html
+++ b/index.html
@@ -86,9 +86,11 @@
     </div>
 
     <div class="link">
+    <span style="display: block">
     <img src="/thumbnails/epic image.jpeg" class="thumbnail">
     <a target="_blank" href="https://epictrending.com/">
       Visit Our Website!
+    </span>
     </a>
 
     </div>
