added twitter link

--- a/index.html
+++ b/index.html
@@ -95,6 +95,15 @@
 
     </div>
 
+    <div class="link">
+      <span style="display: block">
+      <img src="/thumbnails/twitter.jpeg" class="thumbnail">
+      <a target="_blank" href="https://x.com/EpicTopTrending">
+        Check Out Our Twitter!
+      </a>
+      </span>
+    </div>
+
 
 
   </body>
