--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
       .link a {
         color: #001e1d;
         text-decoration: none;
+        text-align:center;
+        flex-grow: 1;
       }
     </style>
     </div>
