put justify changes on main

--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
       }
       .name {
         color: #fffffe;
+        display:flex;
+        justify-content: center;
       }
       .social-icons a {
         color: #abd1c6;
