put justify changes to center .name

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
         height: 128px;
         object-fit: cover;
         border-radius: 128px;
+        display: flex;
+        justify-content: center;
       }
       .thumbnail {
         width: 48px;
