centered the body

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         Padding-top: 40px;
   
         padding-bottom: 40px;
+        display: flex;
+        justify-content: space-around;
 
       }
     </style>
