took exclamation out

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <span style=display: block">
       <img src="/thumbnails/youtube thumbnail.jpg" class="thumbnail">
       <a target="_blank" href="https://www.youtube.com/@EpicTopTrending">
-      Epic Top Trending's YouTube Channel!        
+      Epic Top Trending's YouTube Channel       
     </span>
     </a>
 
