--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         flex-direction: column;
         gap: 30px;
         max-width: 640px;
+        flex-grow: 1;
       }
       .banner-image {
         width: 128px;
