--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
       .link {background-color: #f9bc60;
         display: flex;
         align-items: center;
+        padding: 5px;
       }
       .link a {
         color: #001e1d;
