--- a/index.html
+++ b/index.html
@@ -7,12 +7,75 @@
     <meta name="author" content="Shana Somervile"
 
   </head>
-
   <body>
-    <img src="/thumbnails/epic image.jpeg" alt="Epic's Logo">
+    <div>
+      <div class="banner"
+        <img src="/thumbnails/epic image.jpeg" alt="Epic's Logo">
+    </div>
+    
+    <div class="name">
+      Epic Top Trending
+    </div>
+
+    <div class="social-icons">
+      <a href="https://www.youtube.com/@EpicTopTrending" target="_blank">
+        Youtube
+      </a>
+      <a href="https://epictrending.com/" target="blank">
+        Website
+      </a>
+      <a href="https://x.com/EpicTopTrending" target="_blank">
+        Twitter
+      </a>
+
+
+    </div>
+
+    <div class="link">
+
+      <img src="/thumbnails/youtube thumbnail.jpg" class="thumbnail">
+
+      <a target="_blank" href="https://www.youtube.com/@EpicTopTrending">
+      Epic Top Trending's YouTube Channel 
+      </a>      
+
+
+    </div>
+
+    <div class="link">
+
+      <img src="/thumbnails/epic image.jpeg" class="thumbnail">
+
+      <a target="_blank" href="https://epictrending.com/">
+      Visit Our Website!
+      </a>
+
+
+    </div>
+
+    <div class="link">
+
+      <img src="/thumbnails/twitter.jpeg" class="thumbnail">
+      
+      <a target="_blank" href="https://x.com/EpicTopTrending">
+        Check Out Our Twitter!
+      </a>
+
+
+    </div>
+
+
+
 
 
 
 
   </body>
+
+ 
+
+
+
+
+  
 </html>
