--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <body>
     <div>
       <div class="banner"
-        <img src="/thumbnails/epic image.jpeg" class="banner-image">
+        <img src="/thumbnails/unsplashjesse-ramirez.jpg" class="banner-image">
     </div>
     
     <div class="name">
