--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
         object-fit: cover;
         border-radius: 128px;
       }
+      .thumbnail {
+        width:48px;
+        height:48px;
+        border-radius: 48px;
+        object-fit: cover;
+      }
     </style>
     
 
@@ -24,7 +30,7 @@
   </head>
   <body>
     <div class="banner">
-      
+
       <img src="/thumbnails/unsplashjesse-ramirez.jpg" class="banner-image">
 
     </div>
