--- a/index.html
+++ b/index.html
@@ -20,6 +20,25 @@
         border-radius: 48px;
         object-fit: cover;
       }
+      body {
+        background-color:aliceblue;
+      
+      }
+      .name {
+        color:blue
+      }
+      .social-icons a {
+        color: blue;
+        text-decoration: none;
+      }
+      .link {
+        background-color:darkgray
+      }
+      .link a {
+        color:azure
+        text-decoration: none;
+      }
+
     </style>
     
 
