--- a/index.html
+++ b/index.html
@@ -33,10 +33,19 @@
       }
       .link {
         background-color:darkgray
+        display: flex;
+        align_items: center;
       }
       .link a {
         color:azure
         text-decoration: none;
+      }
+      .items {
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
+        max-width: 640px;
+
       }
 
     </style>
@@ -67,7 +76,7 @@
 
       Epic Top Trending
       </div>
-      
+
     </div>
 
     <div class="items">
