--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         align_items: center;
       }
       .link a {
-        color:azure
+        color: darkgray;
         text-decoration: none;
       }
       .items {
