--- a/index.html
+++ b/index.html
@@ -33,12 +33,13 @@
       }
       .link {
         background-color:darkgray
-        display: flex;
-        align_items: center;
+        
+    
       }
       .link a {
-        color: darkgray;
+        color: darkslateblue
         text-decoration: none;
+        text-align: center;
       }
       .items {
         display: flex;
