added center to banner

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       }
       .link {
         background-color:darkgray
+
         
     
       }
@@ -40,6 +41,7 @@
         color: darkslateblue
         text-decoration: none;
         text-align: center;
+        flex_grow: 1
       }
       .items {
         display: flex;
@@ -47,6 +49,10 @@
         gap: 30px;
         max-width: 640px;
 
+      }
+      .banner {
+        display: flex;
+        justify_content: center;
       }
 
     </style>
