centered profile photo

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       
       .banner {
         display: flex;
-        justify_content: center;
+        justify-content: center;
       }
 
     </style>
