added links and photos

--- a/index.html
+++ b/index.html
@@ -59,6 +59,14 @@
       
     }
 
+    .thumbnail{
+      width: 48px;
+      height: 48px;
+      border-radius: 48px;
+      object-fit: cover;
+
+    }
+
     .items{
       display: flex;
       flex-direction: column;
@@ -88,15 +96,18 @@
   </div>
 
   <div class="link">
-    <a target="_blank" href=""> link link link link</a>
+    <img src="/thumbnails/twitter.jpeg" class="thumbnail">
+    <a target="_blank" href="https://x.com/EpicTopTrending"> Check Out Our Twitter!</a>
   </div>
 
   <div class="link">
-    <a target="_blank" href=""> link link link link</a>
+    <img src="/thumbnails/epic image.jpeg" class="thumbnail">
+    <a target="_blank" href="https://epictrending.com"> Visit Our Website!</a>
   </div>
 
   <div class="link">
-    <a target="_blank" href=""> link link link link</a>
+    <img src="/thumbnails/youtube thumbnail.jpg" class="thumbnail">
+    <a target="_blank" href="https://www.youtube.com/@EpicTopTrending"> Visit Our YouTube Channel And See Why Millions Of Viewers Choose Epic!</a>
   </div>
 
 
