added youtube link

--- a/index.html
+++ b/index.html
@@ -90,9 +90,11 @@
   </div>
 
   <div class="social-icons">
-    <a href="">
-      twitter
+    
+     <a href="https://www.youtube.com/@epictoptrending" target="_blank">
+      See why millions of viewers choose Epic!
     </a>
+
   </div>
 
   <div class="link">
@@ -107,7 +109,7 @@
 
   <div class="link">
     <img src="/thumbnails/youtube thumbnail.jpg" class="thumbnail">
-    <a target="_blank" href="https://www.youtube.com/@EpicTopTrending"> Visit Our YouTube Channel And See Why Millions Of Viewers Choose Epic!</a>
+    <a target="_blank" href="https://www.youtube.com/@EpicTopTrending"> Visit Our YouTube Channel!</a>
   </div>
 
 
