changed links and name font

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       color: blue;
       display: flex;
       justify-content: center;
+      font-family: sans-serif;
     }
 
     .banner{
@@ -42,6 +43,7 @@
       text-decoration: none;
       display: flex;
       justify-content: space-around;
+      
     }
 
     .link a{
@@ -49,6 +51,7 @@
       text-decoration: none;
       text-align: center;
       flex-grow: 1;
+      font-family: sans-serif;
       
     }
 
